# bazarr-bulk

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: docker.yml  release.yml  rust.yml
examples/: base_url_config.json  config.json
src/: actions.rs  cli.rs  connection.rs  db.rs  main.rs
src/data_types/: app_config.rs  mod.rs  request.rs  response.rs
