[package]
name = "bazarr-bulk"
authors = ["Mateo Radman <radmanmateo@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "A bulk operation CLI tool for Bazarr"
documentation = "https://github.com/mateoradman/bazarr-bulk"
homepage = "https://github.com/mateoradman/bazarr-bulk"
repository = "https://github.com/mateoradman/bazarr-bulk"
license = "MIT"
categories = ["command-line-utilities"]

[[bin]]
bench = false
name = "bb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
config = { version = "0.13.4", features = ["json"] }
human-panic = "1.2.2"
indicatif = { version = "0.17.7", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
