[package]
name = "bazarr-bulk"
authors = ["Mateo Radman <radmanmateo@gmail.com>"]
version = "0.1.6"
edition = "2021"
description = "A bulk operation CLI tool for Bazarr"
documentation = "https://github.com/mateoradman/bazarr-bulk"
homepage = "https://github.com/mateoradman/bazarr-bulk"
repository = "https://github.com/mateoradman/bazarr-bulk"
license = "MIT"
categories = ["command-line-utilities"]

[[bin]]
bench = false
name = "bb"
path = "src/main.rs"

[dependencies]
config = { version = "0.13.4", features = ["json"] }
clap = { version = "4.5.2", features = ["derive"] }
dirs = "5.0"
human-panic = "2.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
reqwest = { version = "0.11.25", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest-retry = "0.4.0"
reqwest-tracing = "0.4.0"
reqwest-middleware = "0.2.5"
