[package]
name = "bazarr-bulk"
authors = ["Mateo Radman <radmanmateo@gmail.com>"]
version = "0.1.7"
edition = "2021"
description = "A bulk operation CLI tool for Bazarr"
documentation = "https://github.com/mateoradman/bazarr-bulk"
homepage = "https://github.com/mateoradman/bazarr-bulk"
repository = "https://github.com/mateoradman/bazarr-bulk"
license = "MIT"
categories = ["command-line-utilities"]

[[bin]]
bench = false
name = "bb"
path = "src/main.rs"

[dependencies]
config = { version = "0.15.18", features = ["json"] }
clap = { version = "4.5.50", features = ["derive"] }
human-panic = "2.0.3"
indicatif = { version = "0.18.1", features = ["tokio"] }
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
reqwest-middleware = "0.4.2"
directories = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
